--- a/UnionSquare.iOS/ELA/Wallet/walletCreate/view/HMWImKeystoreView.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletCreate/view/HMWImKeystoreView.xib
@@ -76,27 +76,27 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wallet_notice" translatesAutoresizingMaskIntoConstraints="NO" id="yJC-t4-vTR">
-                            <rect key="frame" x="15" y="173" width="12" height="12"/>
+                            <rect key="frame" x="15" y="172" width="12" height="12"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="12" id="XWL-mW-lmK"/>
                                 <constraint firstAttribute="height" constant="12" id="tfn-eK-DFe"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="须包含大、小写字母，数字" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7PN-UR-nRZ">
-                            <rect key="frame" x="35" y="166" width="229" height="13.5"/>
+                            <rect key="frame" x="35" y="171" width="229" height="13.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zsf-pt-YxY">
-                            <rect key="frame" x="15" y="247" width="249" height="1"/>
+                            <rect key="frame" x="15" y="246" width="249" height="1"/>
                             <color key="backgroundColor" white="1" alpha="0.79534040179999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="ssH-5b-a3Z"/>
                             </constraints>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入确认密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bbj-Vq-Vtt">
-                            <rect key="frame" x="15" y="192" width="249" height="55"/>
+                            <rect key="frame" x="15" y="191" width="249" height="55"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="55" id="jF9-iA-gss"/>
                             </constraints>
@@ -123,8 +123,6 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="yJC-t4-vTR" firstAttribute="top" secondItem="7PN-UR-nRZ" secondAttribute="top" constant="7" id="4cZ-vH-C44"/>
-                        <constraint firstItem="7PN-UR-nRZ" firstAttribute="top" secondItem="mUy-GB-4WE" secondAttribute="bottom" id="5R0-af-fk8"/>
                         <constraint firstItem="mUy-GB-4WE" firstAttribute="leading" secondItem="C4f-Nj-Zvn" secondAttribute="leading" constant="15" id="7fa-gQ-lcE"/>
                         <constraint firstItem="7PN-UR-nRZ" firstAttribute="leading" secondItem="yJC-t4-vTR" secondAttribute="trailing" constant="8" id="7kt-ad-PZG"/>
                         <constraint firstItem="Zsf-pt-YxY" firstAttribute="leading" secondItem="C4f-Nj-Zvn" secondAttribute="leading" constant="15" id="Ank-KN-F2v"/>
@@ -150,6 +148,7 @@
                         <constraint firstItem="yJC-t4-vTR" firstAttribute="leading" secondItem="C4f-Nj-Zvn" secondAttribute="leading" constant="15" id="g1y-oz-3Ld"/>
                         <constraint firstAttribute="trailing" secondItem="Its-cV-MSK" secondAttribute="trailing" constant="15" id="gBv-L7-jt5"/>
                         <constraint firstItem="cj5-li-4q0" firstAttribute="top" secondItem="C4f-Nj-Zvn" secondAttribute="top" id="iM3-c5-8dT"/>
+                        <constraint firstItem="7PN-UR-nRZ" firstAttribute="top" secondItem="1LT-2s-RA8" secondAttribute="bottom" constant="6" id="kjW-ht-Ihi"/>
                         <constraint firstItem="Bbj-Vq-Vtt" firstAttribute="top" secondItem="yJC-t4-vTR" secondAttribute="bottom" constant="7" id="oDW-41-aif"/>
                         <constraint firstItem="Its-cV-MSK" firstAttribute="leading" secondItem="C4f-Nj-Zvn" secondAttribute="leading" constant="15" id="qvF-rS-z6E"/>
                         <constraint firstItem="Zsf-pt-YxY" firstAttribute="top" secondItem="Bbj-Vq-Vtt" secondAttribute="bottom" id="sFx-Po-He6"/>
