1c2f710c89bf6146556403b5cf0d9b7b15cd5508 [formerly 02ab968fe2cc340d3ab4a77387455854f4d2b99e]
Former-commit-id: 94a2c3c72066e6c2467b8c9661bb17f449b0d625

--- a/UnionSquare.iOS/ELA/Wallet/walletCreate/view/HMWImTheMnemonicWordView.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletCreate/view/HMWImTheMnemonicWordView.xib
@@ -125,13 +125,13 @@
                         <constraint firstItem="lkH-TJ-8d6" firstAttribute="top" secondItem="LTg-Wp-KXm" secondAttribute="bottom" id="YB3-3i-7iR"/>
                         <constraint firstItem="wkV-zU-3lm" firstAttribute="leading" secondItem="hMl-Wz-w1M" secondAttribute="leading" constant="16" id="adF-dv-ix6"/>
                         <constraint firstItem="qCG-c8-ZPv" firstAttribute="leading" secondItem="hMl-Wz-w1M" secondAttribute="leading" constant="15" id="dAj-Zi-Bsi"/>
+                        <constraint firstItem="85c-Rr-ayA" firstAttribute="top" secondItem="qlB-ts-enr" secondAttribute="bottom" constant="4" id="dji-Rl-SrS"/>
                         <constraint firstItem="wkV-zU-3lm" firstAttribute="top" secondItem="cKZ-2D-SgK" secondAttribute="bottom" constant="4" id="gQz-is-5RS"/>
                         <constraint firstAttribute="trailing" secondItem="qlB-ts-enr" secondAttribute="trailing" constant="15" id="hDd-u1-Hh6"/>
                         <constraint firstItem="qlB-ts-enr" firstAttribute="top" secondItem="Ysq-6y-5WF" secondAttribute="bottom" id="j4k-98-gzR"/>
                         <constraint firstItem="85c-Rr-ayA" firstAttribute="leading" secondItem="qCG-c8-ZPv" secondAttribute="trailing" constant="8" id="jVj-Ab-vpO"/>
                         <constraint firstItem="lkH-TJ-8d6" firstAttribute="top" secondItem="LTg-Wp-KXm" secondAttribute="bottom" id="lyI-ZB-dpF"/>
                         <constraint firstItem="lkH-TJ-8d6" firstAttribute="leading" secondItem="hMl-Wz-w1M" secondAttribute="leading" constant="15" id="pEp-98-8CA"/>
-                        <constraint firstItem="85c-Rr-ayA" firstAttribute="centerY" secondItem="qCG-c8-ZPv" secondAttribute="centerY" constant="5" id="pY7-L9-Gge"/>
                         <constraint firstItem="ISy-Px-De5" firstAttribute="top" secondItem="85c-Rr-ayA" secondAttribute="bottom" constant="7" id="suV-r5-fkh"/>
                         <constraint firstItem="Ysq-6y-5WF" firstAttribute="top" secondItem="hMl-Wz-w1M" secondAttribute="top" constant="55" id="tcV-ob-BJt"/>
                         <constraint firstItem="qlB-ts-enr" firstAttribute="leading" secondItem="hMl-Wz-w1M" secondAttribute="leading" constant="15" id="yMz-aK-Xw5"/>
