--- a/UnionSquare.iOS/ELA/Wallet/walletManage/cells/HMWtheWalletListTableViewCell.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletManage/cells/HMWtheWalletListTableViewCell.xib
@@ -31,28 +31,20 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gnc-DP-Pqd">
-                                <rect key="frame" x="51" y="25" width="254" height="19.5"/>
+
+                                <rect key="frame" x="16" y="25" width="289" height="19.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="itY-Yr-ikt">
-                                <rect key="frame" x="16" y="26.5" width="17" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="17" id="7Ee-QA-HnT"/>
-                                    <constraint firstAttribute="height" constant="17" id="K9z-lY-lEA"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.15157645089999999" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="rBH-ee-pOt" firstAttribute="centerY" secondItem="xOG-7h-30N" secondAttribute="centerY" id="7Vs-hF-kTk"/>
                             <constraint firstItem="gnc-DP-Pqd" firstAttribute="centerY" secondItem="xOG-7h-30N" secondAttribute="centerY" id="HOQ-Gl-GRF"/>
-                            <constraint firstItem="itY-Yr-ikt" firstAttribute="leading" secondItem="xOG-7h-30N" secondAttribute="leading" constant="16" id="HSU-N2-vvx"/>
-                            <constraint firstItem="itY-Yr-ikt" firstAttribute="centerY" secondItem="xOG-7h-30N" secondAttribute="centerY" id="IPN-Kx-14q"/>
+                            <constraint firstAttribute="trailing" secondItem="gnc-DP-Pqd" secondAttribute="trailing" constant="15" id="Rfw-h0-ZMQ"/>
                             <constraint firstItem="rBH-ee-pOt" firstAttribute="leading" secondItem="xOG-7h-30N" secondAttribute="leading" id="WY7-UB-Pku"/>
-                            <constraint firstItem="gnc-DP-Pqd" firstAttribute="leading" secondItem="rBH-ee-pOt" secondAttribute="trailing" constant="47" id="iok-Ub-Eoz"/>
-                            <constraint firstAttribute="trailing" secondItem="gnc-DP-Pqd" secondAttribute="trailing" constant="15" id="krC-Ng-xpt"/>
+                            <constraint firstItem="gnc-DP-Pqd" firstAttribute="leading" secondItem="rBH-ee-pOt" secondAttribute="trailing" constant="12" id="fHw-Xc-89X"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -66,9 +58,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="iconImageVIew" destination="itY-Yr-ikt" id="GyW-iP-Gxk"/>
-                <outlet property="labeSuperLeftOffSet" destination="iok-Ub-Eoz" id="FX9-MW-GSy"/>
-                <outlet property="selectView" destination="rBH-ee-pOt" id="bwX-lA-Gpw"/>
+               <outlet property="selectView" destination="rBH-ee-pOt" id="bwX-lA-Gpw"/>
                 <outlet property="walletNameLabel" destination="gnc-DP-Pqd" id="070-Z0-53C"/>
             </connections>
         </tableViewCell>
