--- a/UnionSquare.iOS/ELA/Wallet/walletCreate/FLdoubleWalletVC.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletCreate/FLdoubleWalletVC.xib
@@ -34,6 +34,7 @@
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="05F-YU-Ele">
                     <rect key="frame" x="40" y="507" width="295" height="40"/>
+                    <color key="backgroundColor" red="0.32654017210000003" green="0.5333263278" blue="0.53324335810000001" alpha="0.55887276789999996" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="RCo-g9-TmG"/>
                     </constraints>
