--- a/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/HMWsignUpForViewController.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/HMWsignUpForViewController.xib
@@ -171,6 +171,7 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZkN-wd-SuV">
                     <rect key="frame" x="63" y="514" width="249" height="40"/>
+                    <color key="backgroundColor" red="0.32654017210000003" green="0.5333263278" blue="0.53324335810000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="KRf-jQ-TMe"/>
                     </constraints>
