--- a/UnionSquare.iOS/ELA/Wallet/walletManage/ViewController/HMWExportTheMnemonicWordViewController.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletManage/ViewController/HMWExportTheMnemonicWordViewController.xib
@@ -98,7 +98,7 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gp0-Da-Jh6">
                     <rect key="frame" x="63" y="586" width="249" height="40"/>
-                    <color key="backgroundColor" red="0.65820354917800739" green="0.80540562738544674" blue="1" alpha="0.15201822916666666" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.32654017210000003" green="0.5333263278" blue="0.53324335810000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Rsf-vh-qr1"/>
                     </constraints>
