--- a/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/DrawBackVoteMoneyVC.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/ViewController/DrawBackVoteMoneyVC.xib
@@ -65,7 +65,7 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sG1-Q4-Ybc">
                     <rect key="frame" x="50" y="567" width="275" height="50"/>
-                    <color key="backgroundColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="0.26212581026986304" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.32654017210000003" green="0.5333263278" blue="0.53324335810000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="cZe-ri-BJN"/>
                     </constraints>
