The wallet process
Former-commit-id: 852d86e4b89756765513651140d0e31f7ad1d7ef

--- a/UnionSquare.iOS/ELA/Wallet/walletCreate/cell/HWMaddSignThePurseViewTableViewCell.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletCreate/cell/HWMaddSignThePurseViewTableViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="54.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="请输入多签公钥" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OcM-hM-tBa">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入多签公钥" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OcM-hM-tBa">
                         <rect key="frame" x="30" y="0.0" width="199" height="55"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="55" id="J4Q-FJ-i10"/>
